# ECE470-Project

./: Particle_Filter.py  Plot-of-the-path.ipynb  README.md  controller_cp4_presentation.py  modelALANDR_cp2.ttm  robotics_model_presentation.ttm  visionSensorOverMap.ttt
catkin_ws/src/robot_controller/: CMakeLists.txt  package.xml
catkin_ws/src/robot_controller/scripts/: controller_cp2.py  controller_cp3.py  controller_cp4.py  controller_final_task.py  forward_kinematics.py  inverse_kinematics.py  rotations.py  state.py
catkin_ws/src/robot_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/robot_navigation/launch/: amcl_demo_lidar_rviz.launch
catkin_ws/src/robot_navigation/launch/includes/: move_base.launch.xml
catkin_ws/src/robot_navigation/maps/: mymap.pgm  mymap.yaml
catkin_ws/src/robot_navigation/param/: global_costmap_params.yaml  local_costmap_params.yaml
catkin_ws/src/robot_navigation/rviz/: amcl_lidar.rviz
catkin_ws/src/robot_navigation/scripts/: sendtime.py
catkin_ws/src/robot_slam/: CMakeLists.txt  package.xml
catkin_ws/src/robot_slam/launch/: gmapping.launch  hector.launch  robot_gmapping.launch  robot_hector.launch
catkin_ws/src/robot_slam/rviz/: gmapping.rviz
vrep_scenes/: cp2_interface.ttt  cp3_forward_kinematics.ttt  cp4.ttt  cp4_InvKin_SLAM.ttt  cp5.ttt  cp_final_slam.ttt  cp_final_task.ttt
