<package>
  <name>robot_navigation</name>
  <version>2.3.7</version>
  <description>robot_navigation</description>

  <license>BSD</license>
  <maintainer email="yutong-xie@outlook.com">yutong</maintainer>
	
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>map_server</run_depend>  
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>

  </export>
</package>
